--- a/geoportal_1/src/main/webapp/resources/css/dataTable.css
+++ b/geoportal_1/src/main/webapp/resources/css/dataTable.css
@@ -231,8 +231,7 @@ th.colChkBoxes {
 }
 
 .dataTables_scrollHead {
-	border-bottom: 1px solid #cccccc !important;
-	/*height: 24px;*/ /*preserve basic layout, even if header gets wonky */
+	border-bottom: none;
 	height: 100%;
 	/*max-height: 200px;
 	 */
