fix for differing browser scrollbar widths.
leftPanelModel.js separated from view file.

support for specifying header title (text) in ogp.properties

In DownloadHandlerImpl, don't check for wms describe layer info unless
there is a wms url for the layer.

In MetadataDownloadController, specify UTF-8 and proper mime type (see
Mike Graves' pull request for 1.2 branch)

changed search form boxes to type search per HTML5

misc bug fixes

--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/devincludes.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/devincludes.jspf
@@ -10,6 +10,8 @@
 	href="resources/css/print.css" />
 <link rel="stylesheet" href="resources/css/localize.css"
 	type="text/css" />
+<link rel="stylesheet" href="resources/css/nanoscroller.css"
+	type="text/css" />
 <!--  <script type="text/javascript" src="resources/javascript/require.js"></script>-->
 <script
 	src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
@@ -28,7 +30,7 @@
 <script type="text/javascript"
 	src="resources/javascript/spinners/spinners/spinners.min.js"></script>
 
-<!--  <script type="text/javascript" src="resources/javascript/jquery.ba-resize.js"></script>-->
+<script type="text/javascript" src="resources/javascript/jquery.nanoscroller.min.js"></script>
 <script type="text/javascript" src="resources/javascript/jquery.ba-postmessage.min.js"></script>
 
 <script type="text/javascript"
@@ -69,7 +71,8 @@
 	src="resources/javascript/lib/models/appSettings.js"></script>
 <script type="text/javascript"
 	src="resources/javascript/lib/models/queryModel.js"></script>
-
+<script type="text/javascript"
+	src="resources/javascript/lib/models/leftPanelModel.js"></script>
 <script type="text/javascript"
 	src="resources/javascript/lib/views/selectBoxes.js"></script>
 <script type="text/javascript"
