--- a/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
+++ b/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
@@ -266,7 +266,7 @@ button.ui-button-icons-only {
 .ui-button .ui-button-text {
 	overflow: hidden;
 	display: block;
-	line-height: normal;
+	line-height: 14px;
 	height: 13px;
 	font-size: 12px;
 }
