Some improvements/fixes for search. -map extent changes are queued so that multiple changes in a short time frame fire only one search. -duplicate search queries are detected so that consecutive duplicate queries don't fire multiple searches (pressing the search button over and over without changing any params fires only one search) -the keyword field in advanced search works properly now.
clean-up of solr.js;  a lot of cruft had accumulated.

Hover over cart options now highlights layers correctly.

Some css fixes:  
-borders for table cells in the preview pane are no longer white.
-z order for modal dialog mask fixed

--- a/geoportal_1/src/main/webapp/resources/css/dataTable.css
+++ b/geoportal_1/src/main/webapp/resources/css/dataTable.css
@@ -241,8 +241,12 @@ table.display>tbody>tr>td.previewTools {
 	overflow: visible;
 }
 
-.dataTables_scrollHead tbody {
+.dataTables_scrollHead table.display > tbody {
 	background-color: #F8F8E4;
+}
+
+.dataTables_scrollHead table.display > tbody > tr > td {
+		border-color: #F8F8E4;
 }
 
 .dataTables_scrollBody {
