improved conformance to various terms of service

--- a/geoportal_1/src/main/webapp/resources/css/mapDiv.css
+++ b/geoportal_1/src/main/webapp/resources/css/mapDiv.css
@@ -118,6 +118,11 @@ div.olControlMousePosition {
 	opacity: 0;
 }
 
+
+.olControlAttribution {
+    bottom: 0 !important;
+}
+
 .olControlScaleLine {
 	left: auto !important;
 	right: 10px;
