--- a/geoportal_1/src/main/webapp/resources/css/google.css
+++ b/geoportal_1/src/main/webapp/resources/css/google.css
@@ -1,9 +1,14 @@
+/* attribution displayed elsewhere */
 .olLayerGoogleCopyright {
 	 display: none;
 }
 
 .olLayerGooglePoweredBy {
-	display: none !important;
+	 width: 70px;
+}
+
+.gm-style .gmnoprint {
+    right: 69px !important;
 }
 
 .googleLogo {
