added functionality to display a fixed pixel size circle for instances where bounding boxes are too small to be easily seen by the user (on layer result hover)
Added "powered by Google" attribution to geocoder results, just to make
sure we are dotting our i's and crossing our t's.

--- a/geoportal_1/src/main/webapp/resources/css/structure.css
+++ b/geoportal_1/src/main/webapp/resources/css/structure.css
@@ -96,6 +96,11 @@ h4 {
     color: #FFFFFF;
 }
 
+li.searchAttribution.ui-widget-content.ui-menu-divider {
+    border: medium none;
+    margin: 0;
+}
+
 #mapClearButton {
 	float: right;
 	margin-top: 1px;
