--- a/geoportal_1/src/main/webapp/resources/css/google.css
+++ b/geoportal_1/src/main/webapp/resources/css/google.css
@@ -14,3 +14,10 @@
 .googleLogo {
     margin-bottom: 19px !important;
 }
+
+.poweredByGoogleAttr {
+    background: url("../media/powered-by-google/desktop/powered-by-google-on-white.png") no-repeat scroll 0 0 #FFFFFF;
+    float: right;
+    height: 20px;
+    width: 110px;
+}
