Fixed includes: some items were added twice.
greatly improved handling of column resizing, column adding and removing
in the results table.

Advanced Search Institution selection control maintains Institution case
now.

In mapDiv.js, changed default map projection to EPSG:3857 for improved
compatibility. Also changed handling of layer name retrieval (for
Harvard layers, which have different tilecache and wms names).

--- a/geoportal_1/src/main/webapp/resources/css/structure.css
+++ b/geoportal_1/src/main/webapp/resources/css/structure.css
@@ -295,11 +295,11 @@ li.searchAttribution.ui-widget-content.ui-menu-divider {
 	background: none repeat scroll 0 0 red;
 }
 
-.resizableCol>.ui-resizable-e {
+th >.ui-resizable-e {
 	cursor: col-resize;
 	float: right;
 	height: 14px;
-	margin: 0 -9px 0 0;
+	margin: -14px -9px 0 0;
 	position: static;
 	width: 7px;
 }
