--- a/geoportal_1/src/main/webapp/resources/css/dataTable.css
+++ b/geoportal_1/src/main/webapp/resources/css/dataTable.css
@@ -141,6 +141,7 @@ table.display thead th {
 	font-size: 12px;
 	color: #000000;
 	font-weight: normal;
+	position: relative;
 	/* cursor: hand;*/
 }
 
@@ -148,21 +149,22 @@ table.display thead th {
 .cellWrapper {
 	overflow: hidden;
 	word-break: break-all;
+	width: 100%;
 }
 
-.colOriginator .cellWrapper {
+td.colOriginator .cellWrapper {
 	margin-left: 2px;
 	margin-right: 2px;
 	overflow: hidden;
 }
 
-.colTitle .cellWrapper {
+td.colTitle .cellWrapper {
 	margin-left: 2px;
 	margin-right: 2px;
 	overflow: hidden;
 }
 
-.colPublisher .cellWrapper {
+td.colPublisher .cellWrapper {
 	margin-left: 2px;
 	margin-right: 2px;
 	overflow: hidden;
