add: reimplemented cart table as a backbone view (increased flexibility, move towards removing datatables as a dependency).
fix: better behavior for select boxes.  now close on button click and
focus doesn't change when check boxes are selected or deselected.

fix: previewed layers panel didn't remove tools dom elements on preview
tool close.

fix: removed some dependencies from common controls.

change: wms getmap no longer waits for wms describelayer info to begin
drawing.

--- a/geoportal_1/src/main/webapp/resources/css/dataTable.css
+++ b/geoportal_1/src/main/webapp/resources/css/dataTable.css
@@ -109,7 +109,7 @@ table.display {
 	border-collapse: collapse;
 	table-layout: fixed;
 	cursor: default;
-
+	margin-bottom: 1px;
 	/*	width: 100%;
 	clear: both;
 	*/
@@ -142,6 +142,7 @@ table.display thead th {
 	color: #000000;
 	font-weight: normal;
 	position: relative;
+	white-space: nowrap;
 	/* cursor: hand;*/
 }
 
@@ -213,9 +214,6 @@ td.searchResultsCell {
 	text-overflow: ellipsis;
 }
 
-.colExpand {
-	border-bottom: 1px solid rgb(236, 236, 236);
-}
 
 th.colExpand {
 	border-left: 0 none !important;
@@ -348,15 +346,7 @@ table.display tr.row_selected_bottom td {
 	border-bottom: #d8e8fa 1px solid !important;
 }
 
-table.display tr.cartAction td {
-	opacity: .6;
-}
 
-table.display tr.cartAction.cartSelected td {
-	opacity: 1;
-	background-color: #CDE4FA;
-	border-color: #CDE4FA;
-}
 
 
 
