--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/leftPanel.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/leftPanel.jspf
@@ -26,7 +26,8 @@
 		<%@include file="results.jspf"%>
 	</div>
 	<div id="cartTab">
-		<%@include file="cart.jspf"%>
+		<div id="cartHeader" class="tableHeader"></div>
+		<div id="cart"></div>
 	</div>
 </div>
 
