--- a/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
+++ b/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
@@ -127,7 +127,7 @@
 }
 
 .ui-resizable-e {
-	cursor: e-resize;
+	cursor: col-resize;
 	width: 7px;
 	right: -5px;
 	top: 0;
@@ -266,7 +266,7 @@ button.ui-button-icons-only {
 .ui-button .ui-button-text {
 	overflow: hidden;
 	display: block;
-	line-height: 14px;
+	line-height: 13px;
 	height: 13px;
 	font-size: 12px;
 }
