Fix: Move Object.create code to includes.jspf

--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/includes.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/includes.jspf
@@ -14,6 +14,16 @@
 
 <link rel="stylesheet" href="resources/css/jquery-ui-ogpTheme.custom.css" type="text/css" />
 
+<script>
+if (!Object.create) {
+	Object.create = function(o) {
+		function F() {
+		}
+		F.prototype = o;
+		return new F();
+	};
+};
+</script>
 
 <c:choose>
       <c:when test="${dev}" >
