--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/includes.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/includes.jspf
@@ -9,9 +9,11 @@
 <!--  <script type="text/javascript" src="resources/javascript/jquery.ba-resize.js"></script>-->
 <script src="resources/javascript/jquery.ba-postmessage.min.js"></script>
 <script src="//maps.google.com/maps/api/js?v=3.10&sensor=false"></script>
-<script src="resources/javascript/openlayers/OpenLayers-2.11/OpenLayers.js"></script>
-<script src="resources/javascript/panZoom.js"></script>
+  <script src="http://ol3js.org/en/master/build/ol.js" type="text/javascript"></script>
+<!--  <script src="resources/javascript/openlayers/OpenLayers-2.11/OpenLayers.js"></script>
+<script src="resources/javascript/panZoom.js"></script>-->
 
+<link rel="stylesheet" href="http://ol3js.org/en/master/css/ol.css" type="text/css">
 <link rel="stylesheet" href="resources/css/jquery-ui-ogpTheme.custom.css" type="text/css" />
 
 <script>
