--- a/geoportal_1/src/main/webapp/resources/css/mapDiv.css
+++ b/geoportal_1/src/main/webapp/resources/css/mapDiv.css
@@ -1,10 +1,14 @@
 /* map panel */
 #map {
+	height: 100%;
 	min-height: 512px;
 	margin: 0;
 	min-width: 512px;
-	position: absolute;
 	right: 0;
+}
+
+.olMap {
+	height: 100%;
 }
 
 .map_expanded {
@@ -197,18 +201,23 @@ div.olControlMousePosition {
 	background-position: center;
 }
 
-.olControlNavToolbar {
-	width: 60px;
+
+#mapControls {
+    left: 60px;
+    position: absolute;
+    top: 10px;
+    z-index: 100;
+}
+
+#ogpMapControls {
 	height: 30px;
 }
 
-.olControlNavToolbar div {
-	display: block;
-	width: 100px;
-	height: 28px;
-	top: 10px;
-	left: 6px;
+#ogpMapControls > div {
+	display: inline-block;
+	height: 38px;
 	position: relative;
+	cursor: pointer;
 }
 
 .olControlNavigationHistory {
@@ -222,84 +231,89 @@ div.olControlMousePosition {
 .olControlNavigationHistoryPreviousItemActive {
 	background: url("../media/ogp-sprite.png") no-repeat scroll -31px -139px
 		transparent;
+	width: 30px;
 }
 
 .olControlNavigationHistoryPreviousItemActive:hover {
 	background: url("../media/ogp-sprite.png") no-repeat scroll -31px -183px
 		transparent;
+		width: 30px;
 }
 
 .olControlNavigationHistoryPreviousItemInactive {
 	background: url("../media/ogp-sprite.png") no-repeat scroll -31px -139px
 		transparent;
+			width: 30px;
+		
 }
 
 .olControlNavigationHistoryNextItemActive {
 	background: url("../media/ogp-sprite.png") no-repeat scroll -61px -139px
 		transparent;
+			width: 30px;
+		
 }
 
 .olControlNavigationHistoryNextItemActive:hover {
 	background: url("../media/ogp-sprite.png") no-repeat scroll -61px -183px
 		transparent;
+			width: 30px;
+		
 }
 
 .olControlNavigationHistoryNextItemInactive {
 	background: url("../media/ogp-sprite.png") no-repeat scroll -61px -139px
 		transparent;
+			width: 30px;
+		
 }
 
-.olControlPanel .olControlNavigationItemActive {
+#ogpMapControls .olControlNavigationItemActive {
 	background: url("../media/ogp-sprite.png") no-repeat scroll -122px
 		-183px transparent;
 	width: 38px;
-	height: 38px;
-	cursor: pointer;
+
 }
 
-.olControlPanel .olControlNavigationItemInactive {
+#ogpMapControls .olControlNavigationItemInactive {
 	background: url("../media/ogp-sprite.png") no-repeat scroll -122px
 		-139px transparent;
 	width: 38px;
-	height: 38px;
-	cursor: pointer;
+
 }
 
-.olControlPanel .olControlNavigationItemInactive:hover {
+#ogpMapControls .olControlNavigationItemInactive:hover {
 	background: url("../media/ogp-sprite.png") no-repeat scroll -122px
 		-183px transparent;
 }
 
-.olControlPanel .olControlZoomBoxItemActive {
+#ogpMapControls .olControlZoomBoxItemActive {
 	background: url("../media/ogp-sprite.png") no-repeat scroll -91px -183px
 		transparent;
 	width: 31px;
 	height: 38px;
-	cursor: pointer;
 }
 
-.olControlPanel .olControlZoomBoxItemInactive {
+#ogpMapControls .olControlZoomBoxItemInactive {
 	background: url("../media/ogp-sprite.png") no-repeat scroll -91px -139px
 		transparent;
 	width: 31px;
 	height: 38px;
-	cursor: pointer;
 }
 
-.olControlPanel .olControlZoomBoxItemInactive:hover {
+#ogpMapControls .olControlZoomBoxItemInactive:hover {
 	background: url("../media/ogp-sprite.png") no-repeat scroll -91px -183px
 		transparent;
 }
 
-.olControlPanel .olControlZoomToMaxExtentItemInactive {
+#ogpMapControls .olControlZoomToMaxExtentItemInactive {
 	background: url("../media/ogp-sprite.png") no-repeat scroll 0 -139px
 		transparent;
 	width: 31px;
 	height: 38px;
-	cursor: pointer;
 }
 
-.olControlPanel .olControlZoomToMaxExtentItemInactive:hover {
+#ogpMapControls .olControlZoomToMaxExtentItemInactive:hover {
 	background: url("../media/ogp-sprite.png") no-repeat scroll 0 -183px
 		transparent;
 }
