--- a/geoportal_1/src/main/webapp/resources/css/structure.css
+++ b/geoportal_1/src/main/webapp/resources/css/structure.css
@@ -263,13 +263,12 @@ li.searchAttribution.ui-widget-content.ui-menu-divider {
 /* Container */
 #container {
 	background-color: #fff;
-	/*border-right: #CCCCCC solid 1px;
-	border-left: #CCCCCC solid 1px; */
-	/*min-height:512px;*/
-	/*height: 100%;*/
 	overflow: hidden;
 }
 
+#map {
+	opacity: 0;
+}
 /* left column panel */
 #left_col {
 	height: 100%;
@@ -327,8 +326,14 @@ th >.ui-resizable-e {
 	margin-right: 5px;
 }
 
-.previewPane {
-    border-bottom: 1px solid #CCCCCC !important;
+
+
+.previewedLayers {
+    background-color: #f8f8e4;
+}
+
+.previewedLayers > div {
+	border-bottom: 1px solid #CCCCCC !important;
 }
 
 .arrow_buttons {
@@ -517,9 +522,6 @@ textarea:focus {
 	right: 0;
 }
 
-.previewPane .colPreview, .previewPane .previewTools {
-	border-right: 1px solid #cccccc !important;
-}
 
 #leftColSpacer {
 	background-color: #FFFFFF;
@@ -1279,6 +1281,22 @@ Backbone table view
 	overflow: auto;	
 }
 
+#searchResults > .tableWrapper > .rowContainer {
+	overflow: scroll;
+}
+
+.hiddenRow {
+	display: none;
+}
+
+.hiddenTable {
+	display: none;
+}
+
+.previewedLayers .rowContainer {
+	overflow: visible;
+}
+
 .tableRow {
 	width: 100%;
 	padding-top: 1px;
@@ -1316,6 +1334,8 @@ Backbone table view
 	margin: auto;
 }
 
+/* text columns */
+
 .tableCell > .cellWrapper {
 	width: 100%;
 	margin-left: 2px;
@@ -1324,11 +1344,12 @@ Backbone table view
     font-size: 11px;
     height: 17px;
     line-height: 17px;
+    word-break: break-all;
 }
 
-
-.previewControls > div {
-    line-height: 15px;
+td.colTitle {
+	cursor: pointer;
+	color: #000000 !important;
 }
 
 .rowContainer .colTitle {
@@ -1358,6 +1379,168 @@ Backbone table view
 	background-color: #CDE4FA;
 	border-color: #CDE4FA;
 }
+
+/**********
+preview controls
+***********/
+
+.previewControls {
+	font-size: 11px;
+}
+
+.previewControls > div {
+	line-height: 15px;
+	display: inline-block;
+	height: 17px;
+	position: relative;
+}
+
+.sliderControl>div {
+	color: #231F20;
+	background-color: #FFFFFF;
+	z-index: 10;
+}
+
+.sliderDisplay {
+	font-size: 10px;
+	border: 1px solid #aaaaaa;
+	border-radius: 3px 0 0 3px;
+	padding-left: 5px;
+	padding-right: 2px;
+	display: inline-block;
+}
+
+.sliderArrow {
+	background: url("../media/ogp-sprite.png") no-repeat scroll -65px -64px
+		transparent;
+	border-bottom: 1px solid #aaaaaa;
+	border-radius: 0 3px 3px 0;
+	border-right: 1px solid #aaaaaa;
+	border-top: 1px solid #aaaaaa;
+	height: 15px;
+	vertical-align: top;
+	width: 14px;
+	display: inline-block;
+}
+
+.controlContainer {
+	position: absolute;
+	border: 1px solid #aaaaaa;
+	background: white;
+	height: 11px;
+	width: 71px;
+	padding: 5px 10px 5px 8px;
+	right: 0;
+	top: 100%;
+	display: none;
+}
+
+.controlText {
+	height: 13px;
+	display: inline-block;
+	font-size: 10px;
+	padding: 0px 1px;
+}
+
+
+.colorControl {
+	width: 12px;
+	height: 12px;
+	border: 1px solid #aaaaaa;
+	display: inline-block;
+	-moz-border-radius: 1px;
+}
+
+.sizeControlCell .sliderLabel {
+	display: inline-block;
+	width: 50px;
+}
+
+.opacityControlCell {
+	left: 71px;
+	top: -3px;
+}
+
+.opacityControlCell .sliderValue {
+	display: inline-block;
+	width: 19px;
+	text-align: right;
+}
+
+.sizeControlCell {
+	left: 83px;
+	top: -3px;
+}
+
+.colorControlCell {
+	left: 89px;
+	top: -1px;
+}
+
+/**********
+icons
+***********/
+
+.expandControl {
+	height: 17px;
+	width: 11px;
+}
+
+.expanded {
+	background: url("../media/ogp-sprite.png") no-repeat scroll -92px -115px
+		transparent;
+}
+
+.notExpanded {
+	background: url("../media/ogp-sprite.png") no-repeat scroll -83px -63px
+		transparent;
+}
+
+.zoomToLayerControl {
+	left: 104px;
+	background: url("../media/ogp-sprite.png") no-repeat scroll -9px -90px
+		transparent;
+	height: 17px;
+	width: 17px;
+	top: 1px;
+}
+
+.attributeInfoControl {
+	left: 110px;
+	height: 17px;
+	width: 17px;
+	top: 1px;
+}
+
+.attributeInfoControlOn {
+	background: url("../media/ogp-sprite.png") no-repeat scroll -115px
+		-115px transparent;
+}
+
+.attributeInfoControlOff {
+	background: url("../media/ogp-sprite.png") no-repeat scroll -36px -90px
+		transparent;
+}
+
+.cartIconTable {
+	background: url("../media/ogp-sprite.png") no-repeat scroll -102px -62px
+		transparent;
+	height: 17px;
+	width: 17px;
+}
+
+.repositoryIcon {
+	height: 17px;
+	width: 17px;
+}
+
+.typeIcon {
+	height: 17px;
+	width: 17px;
+	vertical-align: middle;
+}
+
+
 
 /*************
 Info Bubble
