Some minor changes to simplify element resizing.  The "#roll_right" element was moved into the "#left_col" element.  tabs and resize arrows were moved into a ".content" wrapper.
A change was made in mapDiv.js so that the map starts rendering earlier.

--- a/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
+++ b/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
@@ -105,6 +105,10 @@
 	display: block;
 }
 
+.ui-resizable-disabled.ui-state-disabled {
+    opacity: 1;
+}
+
 .ui-resizable-disabled .ui-resizable-handle,.ui-resizable-autohide .ui-resizable-handle
 	{
 	display: none;
