--- a/geoportal_1/src/main/webapp/resources/css/structure.css
+++ b/geoportal_1/src/main/webapp/resources/css/structure.css
@@ -276,13 +276,10 @@ li.searchAttribution.ui-widget-content.ui-menu-divider {
 	cursor: default;
 	display: none;
 	z-index: 1010;
+	position: relative;
+	background-color: #ffffff;
 }
 
-#left_tabs {
-	color: #666666;
-	font-size: 10px;
-	height: 100%;
-}
 
 #tabs {
 	border-right: #999 solid 1px;
@@ -426,12 +423,14 @@ th >.ui-resizable-e {
 #roll_right {
 	min-height: 512px;
 	width: 25px;
-	border-right: 1px solid #999999;
 	background-color: #eeeeee;
 	vertical-align: top;
 	position: absolute;
 	padding: 0px;
+	padding-top: 4px;
 	height: 100%;
+	top: 0px;
+	right: 0px;
 	z-index: 1010;
 }
 
