Added quick fade out and fade in for return of new result set. sometimes the search is so fast that the user doesn't realize a search has been performed.

--- a/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
+++ b/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
@@ -38,6 +38,12 @@
 	z-Index: 9999;
 }
 
+.ui-effects-transfer.saveControl {
+	border: none;
+	/*background: black;*/
+	z-Index: 9999;
+}
+
 .ui-helper-clearfix:before,.ui-helper-clearfix:after {
 	content: "";
 	display: table;
