added show only and select all functionality to multiselect dropdowns.

--- a/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
+++ b/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
@@ -38,8 +38,8 @@
 	z-Index: 9999;
 }
 
-.ui-effects-transfer.saveControl {
-	border: none;
+.ui-effects-transfer-to-cart {
+	border: 0;
 	/*background: black;*/
 	z-Index: 9999;
 }
@@ -273,12 +273,14 @@ button.ui-button-icons-only {
 }
 
 /* button text element */
+
 .ui-button .ui-button-text {
 	overflow: hidden;
 	display: block;
 	line-height: 13px;
 	height: 13px;
 	font-size: 12px;
+	white-space: nowrap;
 }
 
 .ui-button-text-only .ui-button-text {
