- removed print.css from devincludes.jspf; caused funny display in print function.
- modularized layerRow.js so that the content of the expanded row is
rendered in a separate function.  This allows easy replacement. (if you
want to display the abstract instead of preview controls, for example).

--- a/geoportal_1/src/main/webapp/resources/css/structure.css
+++ b/geoportal_1/src/main/webapp/resources/css/structure.css
@@ -1553,6 +1553,12 @@ preview controls
 	top: -1px;
 }
 
+.layerInfo {
+    border: 2px solid #CCCCCC;
+    font-size: 11px;
+    padding: 10px;
+    white-space: pre-wrap;
+}
 /**********
 icons
 ***********/
