-fixed an error in the notice dialog for downloadQueue.js that caused buttons not to be rendered and the request indicator not to disappear on failed downloads. -fixed more memory leaks.  Preview controls that are subviews of layer rows were not properly cleaned up. -added css class "slideVertical" to the collapsed table, so that it moves with the advanced search box expansion/contraction. -added some info and a bean definition (commented out) in security-app-context.xml to support ldap authentication

--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/leftPanel.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/leftPanel.jspf
@@ -31,7 +31,7 @@
 		</div>
 	</div>
 </div>
-<div id="roll_right">
+<div id="roll_right" class="slideVertical">
 	<button class="arrow_right button"></button>
 </div>
 
