--- a/geoportal_1/src/main/webapp/resources/css/mapDiv.css
+++ b/geoportal_1/src/main/webapp/resources/css/mapDiv.css
@@ -42,12 +42,14 @@
 #nwCorner {
     border-color: #1D6EEF rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
     border-width: 30px 30px 0 0;
+    left: 25px;
 }
 
 #swCorner {
     border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #1D6EEF;
     border-width: 30px 0 0 30px;
     bottom: 0;
+    left: 25px;
 }
 
 .corner {
