--- a/geoportal_1/src/main/webapp/resources/css/mapDiv.css
+++ b/geoportal_1/src/main/webapp/resources/css/mapDiv.css
@@ -27,7 +27,8 @@
 #neCorner {
     border-color: rgba(0, 0, 0, 0) #1D6EEF rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
     border-width: 0 30px 30px 0;
-	right: 0px;
+	right: 10px;
+	top: 10px;
 }
 
 
@@ -35,27 +36,29 @@
     border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #1D6EEF rgba(0, 0, 0, 0);
     border-width: 0 0 30px 30px;
     bottom: 0;
-    right: 0;
+    right: 10px;
 }
 
 
 #nwCorner {
     border-color: #1D6EEF rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
     border-width: 30px 30px 0 0;
-    left: 25px;
+    left: 35px;
+    top: 10px;
 }
 
 #swCorner {
     border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #1D6EEF;
     border-width: 30px 0 0 30px;
     bottom: 0;
-    left: 25px;
+    left: 35px;
 }
 
 .corner {
     border-style: solid;
     height: 0;
-    margin: 10px;
+	margin: 0;
+	margin-bottom: 10px;
     position: absolute;
     width: 0;
     z-index: 1001;
