-moved WMS GetFeatureInfo functionality from mapDiv.js to Backbone model and view.
-added paging functionality to the feature info dialog for mulitple
features

-using JQuery UI tooltips for the feature info dialog for increased
responsiveness and readability.

-Created controller and supporting logic to convert WMS GetFeatureInfo
responses into JSON objects easily understandable by Backbone.js. The
abstraction will also allow easier addition of ArcGIS Server feature
info.

-Moved parsing of feature attribute definitions in the XML metadata to
server-side for speed and consistency

-refactored XML parsing to increase responsiveness and reuse.

-moved feature info views and models to appropriate directories

-cleanup of unused code

--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/devincludes.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/devincludes.jspf
@@ -95,6 +95,10 @@
 <script type="text/javascript"
 	src="resources/javascript/lib/views/searchResultsTable.js"></script>
 
+<script type="text/javascript"
+	src="resources/javascript/lib/models/featureInfoModel.js"></script>
+	<script type="text/javascript"
+	src="resources/javascript/lib/views/featureInfoView.js"></script>
 
 <script type="text/javascript"
 	src="resources/javascript/lib/geoCommonsExport.js"></script>
