--- a/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
+++ b/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
@@ -695,7 +695,7 @@ input.ui-button::-moz-focus-inner,button.ui-button::-moz-focus-inner {
 	border-width: 1px 0 0 0;
 }
 
-.ui-menu .ui-menu-item a {
+.ui-menu .ui-menu-item {
 	text-decoration: none;
 	display: block;
 	line-height: 1.5;
@@ -705,7 +705,7 @@ input.ui-button::-moz-focus-inner,button.ui-button::-moz-focus-inner {
 	white-space: nowrap;
 }
 
-.ui-menu .ui-menu-item a.ui-state-focus,.ui-menu .ui-menu-item a.ui-state-active
+.ui-menu .ui-menu-item.ui-state-focus,.ui-menu .ui-menu-item.ui-state-active
 	{
 	font-weight: normal;
 	margin: -1px;
@@ -717,7 +717,7 @@ input.ui-button::-moz-focus-inner,button.ui-button::-moz-focus-inner {
 	line-height: 1.5;
 }
 
-.ui-menu .ui-state-disabled a {
+.ui-menu .ui-state-disabled {
 	cursor: default;
 }
 
@@ -726,7 +726,7 @@ input.ui-button::-moz-focus-inner,button.ui-button::-moz-focus-inner {
 	position: relative;
 }
 
-.ui-menu-icons .ui-menu-item a {
+.ui-menu-icons .ui-menu-item {
 	position: relative;
 	padding-left: 2em;
 }
@@ -998,7 +998,12 @@ input.ui-button::-moz-focus-inner,button.ui-button::-moz-focus-inner {
 }
 
 body .ui-tooltip {
-	border-width: 2px;
+	border-width: 1px;
+	border-color: #4e4e4e;
+}
+
+.ui-tooltip.ui-widget-content {
+    background: none repeat scroll 0 0 #f8f9e4;
 }
 
 /* Component containers
@@ -1086,14 +1091,14 @@ body .ui-tooltip {
 }
 
 /* menu interaction states */
-.ui-menu .ui-menu-item a.ui-state-focus {
+.ui-menu .ui-menu-item.ui-state-focus {
 	border-top: 1px solid #d8e8fa;
 	border-bottom: 1px solid #d8e8fa;
 	background: #ebf6ff;
 	border-radius: 0;
 }
 
-.ui-menu .ui-menu-item a.selected {
+.ui-menu .ui-menu-item.selected {
 	color: #0755AC;
 }
 /* Interaction Cues
