--- a/geoportal_1/src/main/webapp/resources/css/structure.css
+++ b/geoportal_1/src/main/webapp/resources/css/structure.css
@@ -10,16 +10,11 @@ This file has been heavily modified from the original template
 	outline: none;
 }
 
-/*html, body {
-    height: 100%;
-    margin: 0;
-    width: 100%;
-}*/
 body {
 	text-align: left;
 	margin: 0;
 	padding: 0;
-	background: #cccccc; /* url(../media/bg_tile.gif)  repeat;*/
+	background: #cccccc; 
 	font-family: arial, sans-serif;
 	font-size: 12px;
 	color: black;
@@ -34,14 +29,14 @@ img {
 }
 
 h1 {
-	font-size: 14px;
-	color: #003366;
+    color: #003366;
+    font-size: 14px;
 }
 
 h2 {
-	font-size: 13px;
-	color: #3366cc;
-	margin-bottom: 3px;
+    color: #3366cc;
+    font-size: 13px;
+    margin-bottom: 3px;
 }
 
 h3 {
@@ -49,9 +44,6 @@ h3 {
 	color: #003366;
 }
 
-h4 {
-	text-decoration: underline;
-}
 
 .button {
 	cursor: pointer;
@@ -104,6 +96,7 @@ zoom: 1;
     color: #FFFFFF;
 }
 
+/* dropdown styling */
 li.searchAttribution.ui-widget-content.ui-menu-divider {
     border: medium none;
     margin: 0;
@@ -127,7 +120,7 @@ li.searchAttribution.ui-widget-content.ui-menu-divider {
 	width: 136px;	
 }
 
-.dropdown .ui-menu-item > a > div.showOnly {
+.dropdown .ui-menu-item > div.showOnly {
 	font-size: 10px;
     position: absolute;
     right: 31px;
@@ -135,11 +128,11 @@ li.searchAttribution.ui-widget-content.ui-menu-divider {
     display: none;
 }
 
-.dropdown .ui-menu-item > a.ui-state-focus > div.showOnly {
+.dropdown .ui-menu-item.ui-state-focus > div.showOnly {
 	display: inline-block;	
 }
 
-.dropdown .ui-menu-item > a.ui-state-focus > div.showOnly:hover {
+.dropdown .ui-menu-item.ui-state-focus > div.showOnly:hover {
 	text-decoration: underline;
 }
 
@@ -154,7 +147,7 @@ li.searchAttribution.ui-widget-content.ui-menu-divider {
 	text-decoration: underline;
 }
 
-.dropdown .ui-menu-item > a > div.sortArrows {
+.dropdown .ui-menu-item  > div.sortArrows {
 	right: 0px;
 	position: absolute;
 	margin-top: 2px;
@@ -162,19 +155,60 @@ li.searchAttribution.ui-widget-content.ui-menu-divider {
 	height: 12px;
 }
 
-.dropdown .ui-menu-item > a.ui-state-focus > div.sortArrows {
+.dropdown .ui-menu-item.ui-state-focus > div.sortArrows {
 		background: url("../media/sorting.png") no-repeat scroll 0px
 		0px transparent;
 }
 		
-.dropdown .ui-menu-item > a.selected > div.sortArrows.sortDown {
+.dropdown .ui-menu-item.selected > div.sortArrows.sortDown {
 	background: url("../media/sorting.png") no-repeat scroll -22px
 		0px transparent;
 }
 
-.dropdown .ui-menu-item > a.selected > div.sortArrows.sortUp {
+.dropdown .ui-menu-item.selected > div.sortArrows.sortUp {
 	background: url("../media/sorting.png") no-repeat scroll -11px
 		0px transparent;
+}
+
+.styledSelect > ul {
+	max-height: 160px;
+	overflow-x: hidden;
+	overflow-y: auto;
+	position: absolute;
+	z-index: 1500;
+}
+
+.searchFormInput.dropdown {
+	display: inline-block;
+}
+
+.searchFormInput.dropdown .select.ui-button {
+	width: 198px;
+}
+
+.searchFormInput.dropdown ul {
+	min-width: 196px;
+}
+
+.searchFormInput>.styledSelect {
+	width: 255px;
+}
+
+.dropdown .ui-menu-item > div {
+	display: inline-block;
+	margin-right: 9px;
+}
+
+.dropdown .ui-menu-item > div.checkOff {
+	float: right;
+	position: absolute;
+	right: 5px;
+}
+
+.dropdown .ui-menu-item > div.checkOn {
+	float: right;
+	position: absolute;
+	right: 5px;
 }
 
 .owsServicesButton {
@@ -196,6 +230,7 @@ li.searchAttribution.ui-widget-content.ui-menu-divider {
 
 .directionsText {
 	padding: 20px;
+	margin-top: 30px;
 }
 /*2*/
 #metadataDownloadButton {
@@ -265,46 +300,7 @@ li.searchAttribution.ui-widget-content.ui-menu-divider {
 	visibility: hidden;
 }
 
-.styledSelect>ul {
-	max-height: 160px;
-	overflow-x: hidden;
-	overflow-y: auto;
-	position: absolute;
-	z-index: 1500;
-}
 
-.searchFormInput.dropdown {
-	display: inline-block;
-}
-
-.searchFormInput.dropdown .select.ui-button {
-	width: 198px;
-}
-
-.searchFormInput.dropdown ul {
-	min-width: 196px;
-}
-
-.searchFormInput>.styledSelect {
-	width: 255px;
-}
-
-.dropdown .ui-menu-item>a>div {
-	display: inline-block;
-	margin-right: 9px;
-}
-
-.dropdown .ui-menu-item>a>div.checkOff {
-	float: right;
-	position: absolute;
-	right: 5px;
-}
-
-.dropdown .ui-menu-item>a>div.checkOn {
-	float: right;
-	position: absolute;
-	right: 5px;
-}
 
 .selectText {
 	vertical-align: top;
@@ -1092,7 +1088,9 @@ table.downloadStatus td {
 }
 
 table.attributeInfo {
-	padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
 	width: 100%;
 }
 
@@ -1109,12 +1107,42 @@ td.attributeName:hover {
 	color: #417dc1;
 }
 
+.ui-dialog.attributesDialog .ui-dialog-content {
+	overflow: hidden;
+	margin-bottom: 18px;
+}
+
 .getFeatureTitle {
 	font-size: 14px;
 	padding-left: 10px;
 	padding-right: 10px;
 	padding-top: 5px;
 	text-align: left;
+	display: inline;
+}
+
+.featurePage {
+    display: inline-block;
+    position: absolute;
+    right: 14px;
+}
+
+.featurePage button {
+    background: none;
+    border: none;
+}
+
+.featurePage button.inactive {
+	color: lightgrey;
+}
+
+.attrHeader {
+	padding: 10px 0;
+}
+
+.attrContainer {
+    height: 100%;
+    overflow: auto;
 }
 
 .columnSort {
